...
  }

  @override
  String get movingScreenTitle => 'this is moving screen';

  @override
  String get cancel => 'Cancel';

  @override
  String get ok => 'OK';

  @override
  String get youWillBeLate =>
      'If you don\'t start preparing now, you\'ll be late!';

  @override
...

  @override
  String get zonedTimeSelectUnavailableZone =>
      'Device time zone unavailable. Select one to continue.';

  @override
  String get zonedTimeNextValid => 'Review next valid time';

  @override
  String get zonedTimePreparationStart => 'Preparation starts';

  @override
  String get zonedCityAsiaSeoul => 'Seoul';
...
